--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -9,13 +9,14 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <!-- Bootstrap core CSS     -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 
     <!-- Animation library for notifications   -->
     <link th:href="@{/css/animate.min.css}" rel="stylesheet"/>
-
     <!--  Paper Dashboard core CSS    -->
     <link th:href="@{/css/paper-dashboard.css}" rel="stylesheet"/>
 
