--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -26,7 +26,7 @@
             </li>
 
             <li>
-                <a th:href="@{/allUser}">
+                <a th:href="@{/allAccount}">
                     <i class="ti-folder"></i>
                     <p>Manage Account</p>
                 </a>
