--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -20,20 +20,20 @@
             </li>
             <li>
                 <a th:href="@{/categories}">
-                    <i class="ti-folder"></i>
+                    <i class="ti-menu"></i>
                     <p>Manage Category</p>
                 </a>
             </li>
 
             <li>
                 <a th:href="@{/allAccount}">
-                    <i class="ti-folder"></i>
+                    <i class="ti-user"></i>
                     <p>Manage Account</p>
                 </a>
             </li>
             <li>
                 <a th:href="@{/allComment}">
-                    <i class="ti-folder"></i>
+                    <i class="ti-comments"></i>
                     <p>Manage Comments</p>
                 </a>
             </li>
