--- a/src/main/resources/templates/accountTemplates/showAll.html
+++ b/src/main/resources/templates/accountTemplates/showAll.html
@@ -1,64 +1,85 @@
 <div class="card" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="header">
-        <h4 class="title">All Account</h4>
-        <p class="category">shows all available User</p>
+        <h4 class="title">Account </h4>
+        <p class="category">shows all available Account</p>
+        <div class="row">
+            <form th:action="@{/allAccount}" method="get">
+                <div class="col-sm-9 ">
+                    <a class="btn btn-success" href="#">New Account</a>
+                </div>
+                <div class="col-sm-3">
+                    <div class="input-group no-border">
+                        <input type="text" th:value="${keyword}" name="keyword" class="form-control"
+                               placeholder="Search...">
+                        <input type="hidden" th:value="${limit}" name="limit">
+                        <input type="hidden" th:value="${currentPage}" name="page">
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <i class="nc-icon nc-zoom-split"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <th:block th:if="${#lists.isEmpty(accounts)}">
+            <h5 style="color: red">Not Found Account</h5>
+        </th:block>
     </div>
     <div class="content table-responsive table-full-width">
-        <form class="form-inline" action="#" th:action="@{/chapter/search}" method="get">
-            <input class="form-control mr-sm-2" type="search" name="hh" placeholder="Search by name ..." />
-            <button class="btn btn-primary" type="submit">
-                <i class="fa fa-search"></i> Search
-            </button>
-        </form>
-        <table class="table table-striped">
-            <thead>
-            <th>ID</th>
-            <th>Full Name</th>
-            <th>Address</th>
-            <th>Email</th>
-            <th>Action</th>
+        <th:block th:unless="${#lists.isEmpty(accounts)}">
+            <table class="table table-striped">
+                <thead>
+                <th>ID</th>
+                <th>Full Name</th>
+                <th>Address</th>
+                <th>Email</th>
+                <th>Action</th>
 
-            <th></th>
-            </thead>
-            <tbody>
-            <tr th:each="c : ${accounts}">
-                <td th:text="${c.id}"></td>
-                <td th:text="${c.fullname}"></td>
-                <td th:text="${c.address}"></td>
-                <td th:text="${c.email}"></td>
-                <td>
-                    <a th:href="@{'/account/' + ${c.id}}" class="btn btn-default btn-xs"><i
-                            class="fa fa-pencil-square-o"></i></a>
-                    <a th:href="@{'/account/show/' + ${c.id}}" class="btn btn-primary btn-xs"><i
-                            class="fa fa-search"></i></a>
-                    <a class="btn btn-danger btn-xs"><i
-                            class="fa fa-trash-o"></i></a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <nav aria-label="Pagination" th:if="${accounts.totalPages gt 0}">
-            <ul class="pagination justify-content-center font-weight-bold">
-                <li class="page-item" th:classappend="${accounts.number eq 0} ? 'disabled'">
-                    <a class="page-link"
-                       th:href="@{/allAccount?page={id}(id=${accounts.number lt 2 ? 1 : accounts.number})}"
-                       aria-label="Previous" title="Previous Page" data-toggle="tooltip">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li class="page-item" th:classappend="${i eq accounts.number + 1} ? 'active'"
-                    th:each="i : ${#numbers.sequence( 1, accounts.totalPages, 1)}">
-                    <a class="page-link" th:href="@{/allAccount?page={id}(id=${i})}" th:text="${i}"
-                       th:title="${'Page '+ i}" data-toggle="tooltip"></a>
-                </li>
-                <li class="page-item" th:classappend="${accounts.number + 1 eq accounts.totalPages} ? 'disabled'">
-                    <a class="page-link"
-                       th:href="@{/allAccount?page={id}(id=${accounts.number + 2})}"
-                       aria-label="Next" title="Next Page" data-toggle="tooltip">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+                <th></th>
+                </thead>
+                <tbody>
+                <tr th:each="c : ${accounts}">
+                    <td th:text="${c.id}"></td>
+                    <td th:text="${c.fullname}"></td>
+                    <td th:text="${c.address}"></td>
+                    <td th:text="${c.email}"></td>
+                    <td>
+                        <a th:href="@{'/account/' + ${c.id}}" class="btn btn-default btn-xs"><i
+                                class="fa fa-pencil-square-o"></i></a>
+                        <a th:href="@{'/account/show/' + ${c.id}}" class="btn btn-primary btn-xs"><i
+                                class="fa fa-search"></i></a>
+                        <a class="btn btn-danger btn-xs"><i
+                                class="fa fa-trash-o"></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <nav aria-label="Page navigation example" th:if="${totalPage > 1}">
+                <ul class="pagination float-right">
+                    <li class="page-item"><a class="page-link"
+                                             th:href="@{/allAccount(page=${1}, limit=${limit})}">First</a>
+                    </li>
+                    <li th:if="${currentPage > 1}" class="page-item"><a class="page-link"
+                                                                        th:href="@{/allAccount(page=${currentPage - 1}, limit=${limit})}">Previous</a>
+                    </li>
+                    <li th:if="${currentPage > 1}" class="page-item"><a class="page-link"
+                                                                        th:href="@{/allAccount(page=${currentPage - 1}, limit=${limit})}">[[${currentPage
+                        - 1}]]</a></li>
+                    <li class="page-item active"><a class="page-link" href="#">[[${currentPage}]]</a>
+                    </li>
+                    <li th:if="${currentPage < totalPage}" class="page-item"><a class="page-link"
+                                                                                th:href="@{/allAccount(page=${currentPage + 1}, limit=${limit})}">[[${currentPage
+                        + 1}]]</a></li>
+                    <li th:if="${currentPage < totalPage}" class="page-item"><a class="page-link"
+                                                                                th:href="@{/allAccount(page=${currentPage + 1}, limit=${limit})}">Next</a>
+                    </li>
+                    <li class="page-item"><a class="page-link"
+                                             th:href="@{/allAccount(page=${totalPage}, limit=${limit})}">Last</a>
+
+                </ul>
+            </nav>
+        </th:block>
+
     </div>
 </div>
