--- a/src/main/resources/templates/fragments2/navbar2.html
+++ b/src/main/resources/templates/fragments2/navbar2.html
@@ -35,7 +35,7 @@
                         <span>My profile</span>
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a th:href="@{/logout}" class="dropdown-item">
+                    <a href="#!" class="dropdown-item">
                         <i class="ni ni-user-run"></i>
                         <span>Logout</span>
                     </a>
