--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -95,7 +95,7 @@
 									<div class="input-group-prepend">
 										<span class="input-group-text"><i class="ni ni-hat-3"></i></span>
 									</div>
-									<input class="form-control" placeholder="Name" type="text" th:field="*{fullname}">
+										<input class="form-control" placeholder="Name" type="text" th:field="*{fullname}">
 								</div>
 							</div>
 							<div class="form-group">
@@ -105,7 +105,7 @@
 									<div class="input-group-prepend">
 										<span class="input-group-text"><i class="ni ni-hat-3"></i></span>
 									</div>
-									<input class="form-control" placeholder="Name" type="text" th:field="*{address}">
+									<input class="form-control" placeholder="Address" type="text" th:field="*{address}">
 								</div>
 							</div>
 							<div class="form-group">
