--- a/src/main/resources/templates/storyTemplates/showAll.html
+++ b/src/main/resources/templates/storyTemplates/showAll.html
@@ -63,14 +63,10 @@
                         </td>
                         <td th:text="${story.status}"></td>
                         <td class="text-center">
-                            <a th:href="@{'/story/show/' + ${story.id}}" class="btn btn-primary btn-xs"><i
-                                    class="fa fa-search"></i></a>
-                            <a th:href="@{'/story/' + ${story.id}}" class="btn btn-default btn-xs"><i
-                                    class="fa fa-pencil-square-o"></i></a>
-                            <!--  <a th:href="@{'/story/delete/' + ${story.id}}" class="btn btn-danger btn-xs"><i
-                                      class="fa fa-trash-o"></i></a>-->
-                            <a th:href="@{'/story/chapters/'+ ${story.id}}" class="btn btn-default btn-xs"><i
-                                    class="fa fa-list"></i></a>
+                            <a th:href="@{'/story/show/' + ${story.id}}" class="btn btn-primary btn-xs">Show</a>
+                            <a th:href="@{'/story/' + ${story.id}}" class="btn btn-primary btn-xs">Edit</a>
+                              <a th:href="@{'/story/delete/' + ${story.id}}" class="btn btn-danger btn-xs">Delete</a>
+                            <a th:href="@{'/story/chapters/'+ ${story.id}}" class="btn btn-default btn-xs">List Chapter</a>
                         </td>
                     </tr>
                     </tbody>
@@ -105,3 +101,36 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("#select_all").click(function(){
+            $(document).ready(function () {
+                $("#select_all").click(function () {
+                    var checked_status = this.checked;
+                    $("input[name='select[]']").each(function(){
+                        $("input[name='select[]']").each(function () {
+                            this.checked = checked_status;
+                        });
+                    });
+                    $(".btn-delete-author").click(function () {
+                        var id = $(this).attr("href").replace("#", "");
+                        if (confirm("Bạn có chắc muốn xoá tác giả này?")) {
+                            $.ajax({
+                                url: "/admin/authors/ajax-delete/" + id,
+                                type: "DELETE",
+                                headers: {
+                                    "X-CSRF-TOKEN": $("meta[name='_csrf']").attr("content")
+                                },
+                                success: function (data) {
+                                    alert("Xoá thành công!");
+                                    window.location.reload();
+                                },
+                                error: function () {
+                                    alert("Thao tác thất bại, vui lòng thử lại sau!");
+                                }
+                            });
+                        }
+                        return false;
+                    });
+                });
+</script>
